Changed tool button to tool bar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
    </head>
            
    <body>
-        <div id="mainDiv">
+        <div id="mainDiv" class="mainDiv">
 
-            <!--button>Click me!</button-->
+            <div class="toolbar">
+                <button class="tool" id="Draw">Draw</button>
+                <button class="tool" id="Select">Select</button>
+                <button class="tool" id="Remove">Remove</button>
+            </div>
             <canvas id="TheCanvas">
 
             </canvas>
